# friendly_poker

./: .gitignore  CLAUDE.md  README.md  alembic.ini  example.env  pyproject.toml
.github/workflows/: ci.yml  lint-and-types.yml  migrations.yml  tests.yml
alembic/: README  env.py
alembic/versions/: 20260222_0001_initial.py  20260222_0002_hardening.py  20260404_0003_next_game_settings.py
src/bot/: config.py  main.py
src/bot/controllers/: debt.py  game.py  record.py  user.py
src/bot/controllers/game/: __init__.py  crud.py  next_game_settings.py  reports.py  stats.py  types.py
src/bot/handlers/: callbacks_handlers.py  commands_handler.py  debt_handlers.py  errors_handler.py  photo_handler.py  states_handler.py
src/bot/handlers/callbacks/: __init__.py  add_funds.py  common.py  delete_player.py  finalization.py  game_menu.py  multiselect.py  next_game_settings.py  single_player_actions.py
src/bot/internal/: admin_menu.py  callbacks.py  commands.py  config_dicts.py  context.py  dicts.py  enums.py  keyboards.py  lexicon.py  notify_admin.py  poll.py  schemas.py
src/bot/internal/keyboards/: __init__.py  add_funds.py  debts.py  delete_player.py  finalization.py  game_menu.py  next_game_settings.py  player_select.py
src/bot/middlewares/: auth_middleware.py  logging_middleware.py  session_middleware.py  updates_dumper_middleware.py
src/bot/services/: debt_notification.py  game_abort.py  game_finalization.py  photo_reminder.py  player_deletion.py
src/database/: database_connector.py  migrate_sqlite_to_postgres.py  models.py  tables_helper.py
tests/: conftest.py  test_admin_menu.py  test_commands_handler.py  test_debt.py  test_debt_controller.py  test_game_controller.py  test_next_game_behaviour.py  test_record_controller.py  test_user_controller.py
